fixed notification z-index in mobile responsive

--- a/src/styles/PageContent.module.css
+++ b/src/styles/PageContent.module.css
@@ -31,7 +31,7 @@
     background-color: #ffffff6e;
     backdrop-filter: blur(10px);
     box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    z-index: 100;
     width: 100%;
   }
   .results {
